Add support for app.sh